# shared_library_examples

./: .bazelrc  .gitignore  BUILD  CMakeLists.txt  README.md  build.sh  main.cpp
f1/: f1.cpp  f1.h
f2/: f2.cpp  f2.h
